tests/resource/valid/function/ternary_function_call.mamba
def my_fun(x: Int) => print(x)

my_fun(if True then 1 else 2)
