tests/resource/invalid/type/function/return_statemet.mamba
def f(x: Int) => return print(x)
